<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Tuning App</string>

    <string name="set_notation">Set notation</string>
    <string name="choose_notation">Choose notation</string>
    <string name="set_reference_pitch">Set reference pitch</string>
    <string name="choose_a_frequency">Choose a frequency:</string>
    <string name="permission_required">Permission required</string>
    <string name="microphone_permission_required">Microphone permission is required. App will close.</string>
    <string name="ok">OK</string>
    <string name="choose_tuning_mode" translatable="false">Choose tuning mode</string>
    <string name="AUTO">AUTO</string>
    <string name="about_us">About Us</string>
    <string name="instrument_tuning_aplication">Instrument Tuning Application</string>
    <string name="created_by_pitch_lab_2020">Created by Pitch Lab © 2020</string>
    <string name="chs_project_in_android_studio">CHS Project in Android Studio</string>
    <string name="politehnica_university_of_timi_oara">Politehnica University of Timișoara</string>
    <string name="by_daniel_zanfir_and_sergiu_radu">By Daniel Zanfir and Sergiu Radu</string>

    <string-array name="tunings" >
        <item>Chromatic</item>
        <item>Guitar (standard)</item>
        <item>Guitar (Drop D)</item>
        <item>Guitar (Drop C)</item>
        <item>Guitar (Drop C#)</item>
        <item>Guitar (Open G)</item>
        <item>Bass (standard)</item>
        <item>Bass (Drop C)</item>
        <item>Ukulele (standard)</item>
        <item>Ukulele (D tuning)</item>
        <item>Violin (standard)</item>
        <item>Cello (standard)</item>
        <item>Viola (standard)</item>
        <item>Banjo (standard)</item>
    </string-array>

    <string-array name="tuningsVoiceInput" >
        <item>chromatic</item>
        <item>guitar standard</item>
        <item>guitar drop D</item>
        <item>guitar drop C</item>
        <item>guitar drop C#</item>
        <item>guitar open G</item>
        <item>bass standard</item>
        <item>bass drop C</item>
        <item>ukulele standard</item>
        <item>ukulele D tuning</item>
        <item>violin</item>
        <item>cello</item>
        <item>viola</item>
        <item>banjo</item>
    </string-array>

    <string-array name="notations">
        <item name="scientific">Scientific pitch notation</item>
        <item name="sol">Solfège</item>
    </string-array>
</resources>
