<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity"
    android:orientation="horizontal">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

    <TextView
        android:id="@+id/about_us_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_gravity="center"
        android:textSize="60sp"
        android:paddingBottom="5dp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"/>

        <View
            android:layout_width="150dp"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:background="#fff5c71a" />

        <TextView
            android:id="@+id/details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="17sp"
            android:paddingBottom="5dp"
            android:paddingTop="100dp"
            android:textColor="#FFFFFF"
            android:text="@string/instrument_tuning_aplication"/>

        <TextView
            android:id="@+id/details_v2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="17sp"
            android:paddingBottom="75dp"
            android:textColor="#FFFFFF"
            android:text="@string/created_by_pitch_lab_2020"/>

        <TextView
            android:id="@+id/whatItis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="17sp"
            android:paddingBottom="5dp"
            android:textColor="#fff5c71a"
            android:text="@string/chs_project_in_android_studio"/>
        <TextView
            android:id="@+id/uniName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="17sp"
            android:paddingBottom="5dp"
            android:textColor="#fff5c71a"
            android:text="@string/politehnica_university_of_timi_oara"/>
        <TextView
            android:id="@+id/creatorsName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="17sp"
            android:paddingBottom="5dp"
            android:textColor="#fff5c71a"
            android:text="@string/by_daniel_zanfir_and_sergiu_radu"/>
    </LinearLayout>


</LinearLayout>